--- a/src/components/ui/page-banner/page-banner.css
+++ b/src/components/ui/page-banner/page-banner.css
@@ -113,7 +113,7 @@
   transform: translate(-50%, -50%);
   width: 100%;
   max-width: 80rem;
-  z-index: 2;
+  z-index: 5;
 }
 
 .banner-heading {
